fixed table text align

--- a/frontend/common/kubeflow-common-lib/projects/kubeflow/src/styles.scss
+++ b/frontend/common/kubeflow-common-lib/projects/kubeflow/src/styles.scss
@@ -81,7 +81,7 @@ body {
 }
 
 .right-align {
-  text-align: right;
+  text-align: right !important;
 }
 
 .mat-mdc-tooltip-panel .mat-tooltip {
